# server-scripts

./: .gitignore  README.md  common.sh  startup.sh
backups/: backup.sh  borg-backup.sh  borg-restore.sh  borg_backup.sh  borg_bkp.sh  borg_restore.sh  proton-rclone.sh  restore-plex.sh  restore_plex.sh
common/wsl2/: notes.md
common/wsl2/init/: wsl2-profile.sh  wsl2-startup.sh
config/: autosource.py  autosource.sh  config-notes.md  main_profile.sh  rotate_screen.sh
config/arch/arm64/: bashrc.sh  profile.sh  (+1 more)
config/common/: bashrc.sh  profile.sh  startup.sh
config/default/: bashrc.sh  profile.sh
config/marigold/: bashrc.sh  profile.sh  startup.sh
config/ovedur/: bashrc.sh  notes.md  profile.sh  startup.sh
config/python_conf_mgmt/: pyproject.toml
config/saeglopur/: bashrc.sh  profile.sh  startup.sh
config/smaskifa/: bashrc.sh  profile.sh  startup.sh
config/staralfur/: bashrc.sh  profile.sh  startup.sh
config/templates/: bashrc.sh  profile.sh  startup.sh
configs/dotfiles/: refresh.sh  startup.sh  update.sh  updates.sh
configs/starship/: starship.toml
constants/: bash_colors.sh  bash_formats.sh  bash_formatting.sh  icao.sh  sudo_timeout.sh
databases/ideas/: pyproject.toml
databases/ideas/home-inventory-database/: Container.py  Interface.py  Item.py
databases/ideas/home-inventory-database/enums/: Colors.py  Location.py
dotfiles/smaskifa/: .bashrc
dotfiles/staralfur/: .bashrc  .profile
fun/: local-weather  local-weather.sh  local_weather.sh  random_albums.py
hardware/: bad-blocks.sh  bad_blocks.sh  bench.sh  bench_hdd.sh  hdd_smart.sh  temps.sh  toggle_turbo_boost.sh
hardware/benchmarks/: storage-bench.sh
hardware/benchmarks/rocm/: poetry.toml  pyproject.toml
hardware/benchmarks/rocm/rocm_bench/: rocm_bench.ipynb
installation/: install-mergerfs.sh  install-plex.sh  install_mergerfs.sh  install_plex.sh
plex/: force_loudness.sh
python/album-picker/: pyproject.toml
python/album-picker/album-picker/: random-albums.py
python/album-picker/album_picker/: random_albums.py
security/: geoip.sh  ufw-cloudflare.sh  ufw_cloudflare.sh  wireguard-namespace.sh  wireguard_namespace.sh  wireguard_refresh.sh
specific/: saeglopur.sh  smaskifa.sh  staralfur.sh
specific/marigold/: notes.md
specific/saeglopur/: saeglopur-startup.sh
specific/smaskifa/: smaskifa-profile.sh  smaskifa-startup.sh
specific/staralfur/: staralfur-profile.sh  staralfur-startup.sh
updates/: update_cloudflared.sh
utils/: force-loudness-scan-plex.sh
utils/exiftool/: add-metadata.sh  add_metadata.sh  process-photos.sh  process_photos.sh
utils/immich/: immich-maintenance.sh  immich.env  immich_maintenance.sh  photography-import.sh  run-album-import.sh  run-dupe-check.sh  run-google-import.sh  run-loose-import.sh  run-stack.sh
utils/radicale/dav-renamer-python/: dav-renamer.py  pyproject.toml
(+40 files in other folders)
