[tool.poetry]
name = "bash-configs"
version = "0.1.0"
description = "Replaces bashrc, bashprofile, etc."
authors = ["Dante Razo <dante@razonet.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
