[tool.poetry]
name = "home-inventory-database"
version = "0.1.0"
description = "Designing and implementing a home inventory database."
authors = ["Dante Razo <dante@razonet.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
