[tool.poetry]
name = "album-picker"
version = "0.1.0"
description = "Picks a random album from my personal collection."
authors = ["Dante Razo <dante@razonet.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
discogs-client = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
