[tool.poetry]
name = "album-picker"
version = "0.1.0"
description = ""
authors = ["Dante Razo <dante@razonet.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discogs-client = "^2.3.0"
pandas = "^2.2.2"
ipython = "^8.26.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
