[project]
    name = "rocm_bench"
    version = "0.1.0"
    description = ""
    authors = []
    requires-python = ">=3.12"
    dependencies = []

[build-system]
    requires = ["poetry-core>=2.0.0,<3.0.0"]
    build-backend = "poetry.core.masonry.api"

[tool.poetry]
    packages = [{ include = "rocm_bench" }]


[tool.poetry.dependencies]
    python = "^3.12"
