[project]
    name = "rocm_bench"
    version = "0.1.0"
    description = ""
    authors = []
    requires-python = ">=3.12"
    dependencies = ["torch (>=2.8.0,<3.0.0)"]

[build-system]
    requires = ["poetry-core>=2.0.0,<3.0.0"]
    build-backend = "poetry.core.masonry.api"

[tool.poetry]
    packages = [{ include = "rocm_bench" }]


[tool.poetry.dependencies]
    python = ">=3.12,<3.14"
