[tool.poetry]
name = "dav-renamer"
version = "0.1.0"
description = "Renames DAV files based on metadata"
authors = ["Dante Razo <dante@razonet.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
